link to memory shiny app; separate shiny/packages

--- a/index.html
+++ b/index.html
@@ -623,6 +623,13 @@
 
           <!--/radix_placeholder_navigation_in_header-->
           <!--radix_placeholder_site_in_header-->
+          <script type="text/javascript" cookie-consent="tracking" async src="https://www.googletagmanager.com/gtag/js?id=UA-114744558-2"></script>
+          <script type="text/javascript" cookie-consent="tracking">
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+          gtag('config', 'UA-114744558-2');
+          </script>
           <!--/radix_placeholder_site_in_header-->
           
           <style type="text/css">
@@ -640,14 +647,15 @@
           <header class="header header--fixed" role="banner">
           <nav class="distill-site-nav distill-site-header">
           <div class="nav-left">
-          <a class="logo" href="http://anthonypileggi.github.io">
+          <a class="logo" href="https://www.stochastic-squirrel.com">
           <img src="images/anthony-circle.png" alt="Logo"/>
           </a>
           <a href="index.html" class="title">Anthony Pileggi</a>
           </div>
           <div class="nav-right">
           <a href="index.html">Home</a>
-          <a href="rshiny.html">R/Shiny</a>
+          <a href="rshiny.html">Shiny Apps</a>
+          <a href="rpackages.html">R Packages</a>
           <a href="https://github.com/anthonypileggi/cv/raw/master/cv.pdf">CV</a>
           <a href="https://github.com/anthonypileggi/anthonypileggi.github.io" aria-label="Link to source">
           <i class="fab fa-github" aria-hidden="true"></i>
