fix email link; add minesweeper app

--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
                     </a>
                   </li>
                                     <li class="list-inline-item">
-                    <a href=apileggi20@gmail.com>
+                    <a href=mailto:apileggi20@gmail.com>
                       <button type="button" class="btn btn-outline-dark mb-2">
                         Email
                       </button>
@@ -733,7 +733,7 @@
                       GitHub
                     </button>
                   </a>
-                                    <a href=apileggi20@gmail.com>
+                                    <a href=mailto:apileggi20@gmail.com>
                     <button type="button" class="list-group-item list-group-item-action my-1 rounded">
                       Email
                     </button>
